Fix duplicate modal buttons and spacing [skip ci]

--- a/website/static/css/pages/project-page.css
+++ b/website/static/css/pages/project-page.css
@@ -53,6 +53,11 @@
     font-weight: bold;
 }
 
+#duplicateModal h4 {
+    line-height: 34px;
+    padding-bottom: 10px;
+}
+
 /* Multiple device support for project nav-bar */
 @media (max-width: 767px) {
     .osf-project-navbar li>a {
